src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* inter-latin-wght-normal */
@font-face {
	font-family: 'Inter Variable';
	font-style: normal;
	font-display: swap;
	font-weight: 100 900;
	src: url(@fontsource-variable/inter/files/inter-latin-wght-normal.woff2)
		format('woff2-variations');
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304,
		U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
		U+FFFD;
}

body {
	font-family: 'Inter Variable', sans-serif;
}

@layer utilities {
	.custom-box-shadow {
		@apply shadow-none; /* Ensure no default shadow from Tailwind */
		box-shadow:
			rgba(0, 0, 0, 0.12) 0px 1px 1px 0px,
			rgba(61, 59, 53, 0.16) 0px 0px 0px 1px,
			rgba(61, 59, 53, 0.08) 0px 2px 5px 0px;
	}
	.custom-box-shadow-dark {
		@apply shadow-none; /* Ensure no default shadow from Tailwind */
		box-shadow:
			rgba(0, 0, 0, 0.12) 0px 1px 1px 0px,
			rgba(210, 210, 210, 0.16) 0px 0px 0px 1px,
			rgba(210, 210, 210, 0.08) 0px 2px 5px 0px;
	}
	.requiredButton {
		@apply absolute -right-2 -top-2 flex h-4 w-4 items-center justify-center rounded-full bg-[#f3f3f3] pt-1.5 text-sm font-semibold dark:bg-[#242424] dark:text-[#d8d8d8];
	}
	.inputWrapper {
		@apply custom-box-shadow dark:custom-box-shadow-dark relative mb-2.5 cursor-text rounded-md px-2 py-1.5 dark:bg-[#ffffff0e];
	}
	.inputBlock {
		@apply relative h-full w-full px-1 text-[#BBBAB8] caret-black outline-none ring-0 before:absolute before:left-1 dark:text-[#5A5A5A] dark:caret-white;
	}
}

@layer base {
	:root {
		--background: 0 0% 100%;
		--foreground: 240 10% 3.9%;

		--muted: 240 4.8% 95.9%;
		--muted-foreground: 240 3.8% 46.1%;

		--popover: 0 0% 100%;
		--popover-foreground: 240 10% 3.9%;

		--card: 0 0% 100%;
		--card-foreground: 240 10% 3.9%;

		--border: 240 5.9% 90%;
		--input: 240 5.9% 90%;

		--primary: 240 5.9% 10%;
		--primary-foreground: 0 0% 98%;

		--secondary: 240 4.8% 95.9%;
		--secondary-foreground: 240 5.9% 10%;

		--accent: 240 4.8% 95.9%;
		--accent-foreground: 240 5.9% 10%;

		--destructive: 0 72.2% 50.6%;
		--destructive-foreground: 0 0% 98%;

		--ring: 240 10% 3.9%;

		--radius: 0.5rem;
	}

	.dark {
		--background: 240 10% 3.9%;
		--foreground: 0 0% 98%;

		--muted: 240 3.7% 15.9%;
		--muted-foreground: 240 5% 64.9%;

		--popover: 240 10% 3.9%;
		--popover-foreground: 0 0% 98%;

		--card: 240 10% 3.9%;
		--card-foreground: 0 0% 98%;

		--border: 240 3.7% 15.9%;
		--input: 240 3.7% 15.9%;

		--primary: 0 0% 98%;
		--primary-foreground: 240 5.9% 10%;

		--secondary: 240 3.7% 15.9%;
		--secondary-foreground: 0 0% 98%;

		--accent: 240 3.7% 15.9%;
		--accent-foreground: 0 0% 98%;

		--destructive: 0 62.8% 30.6%;
		--destructive-foreground: 0 0% 98%;

		--ring: 240 4.9% 83.9%;
	}
}

@layer base {
	* {
		@apply border-border;
	}
	body {
		@apply bg-background text-foreground;
	}
}

